# proxyclaw-mcp-py

./: .gitignore  README.md  SECURITY.md  pyproject.toml
docs/: anti-bot-rendering-for-ai-agents.md
src/proxyclaw_mcp_server/: __init__.py  server.py
